<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/menu2"
        android:layout_width="311dp"
        android:layout_height="73dp"
        android:text="@string/menu_option_2"
        android:textColor="#120000"
        app:backgroundTint="#99B8ADAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayServerMsg"
        app:layout_constraintVertical_bias="0.343" />

    <Button
        android:id="@+id/menu3"
        android:layout_width="311dp"
        android:layout_height="73dp"
        android:text="@string/menu_option_3"
        android:textColor="#120000"
        app:backgroundTint="#99B8ADAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayServerMsg"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:id="@+id/displayServerMsg"
        android:layout_width="342dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu1"
        android:layout_width="311dp"
        android:layout_height="73dp"
        android:text="@string/menu_option_1"
        android:textColor="#120000"
        app:backgroundTint="#99B8ADAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayServerMsg"
        app:layout_constraintVertical_bias="0.149" />
</androidx.constraintlayout.widget.ConstraintLayout>